--- a/changelog.yaml
+++ b/changelog.yaml
@@ -929,3 +929,4 @@
     added:
     - Massachusetts parameters for Senior Circuit Breaker and Dependent Care Credits.
     - Washington capital gains and Working Families Tax Credit parameters and population impact drop-down.
+    - Standard and itemized deduction parameters.
