--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -34,17 +34,17 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.7
+      - name: Setup pnpm
+        id: pnpm-install
+        uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 7
+          run_install: false
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 14
-          cache: pnpm
-      - uses: pnpm/action-setup@v2.0.1
-        name: Install pnpm
-        id: pnpm-install
-        with:
-          version: 7
-          run_install: false
+          cache: 'pnpm'
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v0
         with:
@@ -101,17 +101,17 @@ jobs:
           python-version: 3.7
       - name: Publish a git tag
         run: ".github/publish-git-tag.sh"
+      - name: Setup pnpm
+        id: pnpm-install
+        uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 7
+          run_install: false
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: 14
-          cache: pnpm
-      - uses: pnpm/action-setup@v2.0.1
-        name: Install pnpm
-        id: pnpm-install
-        with:
-          version: 7
-          run_install: false
+          cache: 'pnpm'
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v0
         with:
