--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -54,6 +54,7 @@ jobs:
         with:
           node-version: 14
           cache: 'pnpm'
+          cache-dependency-path: '**/pnpm-lock.yaml'
       - name: Set up Cloud SDK
         uses: google-github-actions/setup-gcloud@v0
         with:
