might as well cache python dependencies

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -41,6 +41,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.7
+          cache: 'pip'
       - name: Setup pnpm
         id: pnpm-install
         uses: pnpm/action-setup@v2.0.1
