--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,6 +32,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.7
+          cache: 'pip'
       - name: Setup pnpm
         id: pnpm-install
         uses: pnpm/action-setup@v2.0.1
@@ -98,6 +99,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.7
+          cache: 'pip'
       - name: Publish a git tag
         run: ".github/publish-git-tag.sh"
       - name: Setup pnpm
