--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+# What's this file for?
+# Mostly so that Github Actions CI caching works! (it looks for requirements.txt by default)
+# 
 # If you have written a fully working setup.py for your package already, 
 # and your dependencies are mostly external, you could consider having a simple 
 # requirements.txt with only the following:
