--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -42,6 +42,11 @@ jobs:
         with:
           python-version: 3.7
           cache: 'pip'
+      - name: Setup Python Cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.pythonLocation }}
+          key: ${{ env.pythonLocation }}-${{ hashFiles('setup.py') }}
       - name: Setup pnpm
         id: pnpm-install
         uses: pnpm/action-setup@v2.0.1
