--- a/changelog.yaml
+++ b/changelog.yaml
@@ -961,3 +961,7 @@
     fixed:
     - Removed large parameters and variables causing slowdowns.
   date: 2022-07-18 15:40:47
+- bump: minor
+  changes:
+    added:
+    - Massachusetts dependent care credit parameters.
