Add Maryland parameters
Co-authored-by: Will Fedder <fedderw@gmail.com>

--- a/policyengine/countries/us/reform_parameters.yaml
+++ b/policyengine/countries/us/reform_parameters.yaml
@@ -160,6 +160,8 @@ reforms:
       possible_values:
         - key: UNITED_STATES
           value: United States
+        - key: MD
+          value: Maryland
         - key: MA
           value: Massachusetts
         - key: WA
