--- a/changelog.yaml
+++ b/changelog.yaml
@@ -966,3 +966,7 @@
     added:
     - Massachusetts dependent care credit parameters.
   date: 2022-07-18 21:04:48
+- bump: minor
+  changes:
+    added:
+      - Maryland parameters.
