--- a/changelog_entry.yaml
+++ b/changelog_entry.yaml
@@ -1,4 +1,4 @@
 - bump: minor
   changes:
     added:
-      - Increased font size for headings in the "Your Household" page.
+      - Removed the About Your Household header.
