Add basic documentation

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -71,3 +71,5 @@ jobs:
         run: make build
       - name: Run the main tests
         run: make test
+      - name: Test documentation builds
+        run: make documentation
