--- a/changelog_entry.yaml
+++ b/changelog_entry.yaml
@@ -3,3 +3,4 @@
     added:
     - __init__ Python files.
     - GH pages/JB documentation starter.
+    - Logic to handle custom-named parameters in scales.
