Add New York to geographic drop-down Fixes #978

--- a/policyengine/country/us/additional_parameters.yaml
+++ b/policyengine/country/us/additional_parameters.yaml
@@ -180,6 +180,8 @@ reforms:
           value: Massachusetts
         - key: NV
           value: Nevada
+        - key: NY
+          value: New York
         - key: SD
           value: South Dakota
         - key: TN
