--- a/changelog_entry.yaml
+++ b/changelog_entry.yaml
@@ -2,3 +2,5 @@
   changes:
     added:
       - US inputs for unemployment compensation, cash donations, and non-cash donations.
+    fixed:
+      - Time estimate on mobile.
