Fixes Add Social Security repeal switch #857

--- a/changelog_entry.yaml
+++ b/changelog_entry.yaml
@@ -2,5 +2,6 @@
   changes:
     added:
       - US inputs for unemployment compensation, cash donations, and non-cash donations.
+      - Switch to abolish Social Security.
     fixed:
       - Time estimate on mobile.
