Add Missouri income tax Fixes #1014

--- a/policyengine/country/us/additional_parameters.yaml
+++ b/policyengine/country/us/additional_parameters.yaml
@@ -178,6 +178,8 @@ reforms:
           value: Maryland
         - key: MA
           value: Massachusetts
+        - key: MO
+          value: Missouri
         - key: NV
           value: Nevada
         - key: NY
