Add Oregon Fixes #1050

--- a/policyengine/country/us/additional_parameters.yaml
+++ b/policyengine/country/us/additional_parameters.yaml
@@ -192,6 +192,8 @@ reforms:
           value: Nevada
         - key: NY
           value: New York
+        - key: OR
+          value: Oregon
         - key: PA
           value: Pennsylvania
         - key: SD
