adjusted drop-down menus to text-width maxium

--- a/changelog_entry.yaml
+++ b/changelog_entry.yaml
@@ -1,4 +1,4 @@
 - bump: minor
   changes:
     added:
-      - Removed "square look from LinkedIn and Facebook icon.
+      - Adjusted drop-down menus to text-width maximum.
